# ai-invention-a81b4f-lz78-complexity-for-rule-based-sentiment

./: README.md
paper_latex/: paper.tex  references.bib
paper_latex/workspace/: .sdk_openhands_agent_struct_out.json  paper.aux  paper.bbl  paper.blg  paper.out
round-1/dataset-1/: README.md
round-1/dataset-1/demo/: data_code_demo.ipynb  mini_demo_data.json
round-1/dataset-1/src/: .sdk_openhands_agent_struct_out.json  balance_datasets.py  data.py  download_datasets.py  mini_data_out.json  preview_data_out.json  pyproject.toml  requirements.txt
round-1/dataset-1/src/datasets/: README.md  metadata.json  summary.json
round-1/dataset-1/src/datasets/amazon_polarity/: mini_amazon_polarity.json  preview_amazon_polarity.json
round-1/dataset-1/src/datasets/imdb/: mini_imdb.json  preview_imdb.json
round-1/dataset-1/src/datasets/tweet_sentiment/: full_tweet_sentiment_balanced.json  mini_tweet_sentiment.json  preview_tweet_sentiment.json
round-1/research-1/: README.md
round-1/research-1/demo/: research_demo.md
round-1/research-1/src/: .aii_cost_ledger.jsonl  .sdk_openhands_agent_struct_out.json  research_out.json
round-2/experiment-1/: README.md
round-2/experiment-1/demo/: method_code_demo.ipynb  (+1 more)
round-2/experiment-1/src/: .sdk_openhands_agent_struct_out.json  README.md  convert_output.py  create_outputs.py  create_struct.py  generate_outputs.py  method.py  method_out.json  mini_method_out.json  pyproject.toml  run_log.txt  run_log_v2.txt  test_method.py
round-2/experiment-1/src/output/: method_out.json  method_out_schema.json  preview_method_out.json
