[project]
name = "lz78-complexity-sentiment-classification"
version = "1.0.0"
description = "LZ78 complexity-based sentiment classification experiment with baseline comparisons"
requires-python = ">=3.12"
dependencies = [
    "click==8.4.1",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fonttools==4.63.0",
    "joblib==1.5.3",
    "kiwisolver==1.5.0",
    "loguru==0.7.3",
    "matplotlib==3.11.0",
    "narwhals==2.22.1",
    "nltk==3.9.4",
    "numpy==2.4.6",
    "packaging==26.2",
    "pandas==3.0.3",
    "pillow==12.2.0",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.3",
    "regex==2026.5.9",
    "scikit-learn==1.9.0",
    "scipy==1.17.1",
    "seaborn==0.13.2",
    "six==1.17.0",
    "textblob==0.20.0",
    "threadpoolctl==3.6.0",
    "tqdm==4.68.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
